# g4sbs

./: #CMakeLists.txt#  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  GNUmakefile  Makefile  README  README.md  cmake_install.cmake  ddvcs.cc  g4sbs.cc  g4sbs.csh  g4sbs.rootrc  g4sbs.sh  pullgitinfo.py  pullgitinfo3.py  rootlogon.C  rootlogon_builddir.C  rootlogon_install.C  run_example.mac  run_origprop.mac  tdis_beambkgd.mac  temp.txt  vis.mac
JA_files/: ArrayHit.cc  ArraySD.hh  BeamLine.hh  DetectorConstruction.cc  DetectorConstruction.hh  TOSCAField3D.hh
buildtests/: run_buildtests.py
cmake/modules/: FindROOT.cmake
database/: BBPS_blockmap.txt  BBSH_blockmap.txt  BBhodo_map.txt  C16_doserate.txt  ECAL_HCAL_L2_default.txt  ECAL_HCAL_lookup_L2_GEP3_targzoff9cm.txt  ECAL_shower_profiles_gep12.txt  GEP_ECAL_L2sums.txt  HCAL_map.txt  SBS_optics_fitresult_forward_optics_coeff_gep12.txt  SBS_optics_fitresult_optics_coeff_gep12.txt  ecal_cluster_binning.txt  ecal_cluster_mapping.txt  ecal_gep_blockmap.txt  ecal_layout.txt  ecal_map.txt  ecal_mkj_layout_2.txt  ecal_trigger_thresholds_12GeV2.txt  hcal_cluster_binning.txt  hcal_cluster_mapping.txt  hcal_trigger_thresholds_12GeV2.txt  setup_ep_elastic.txt  setup_ep_inelastic.txt  setup_ep_pythia6.txt
farmsub_scripts/: ReadMe.txt  gep12_beam_bkgd.mac  gep12_elastic_sig.mac  makejobs_beam_bkgd.py  makejobs_dis.py  makejobs_elastic.py  makejobs_pythia_bkgd.py  makejobs_sidis_sig.py  makejobs_wiser_bkgd.py  ndvcs_dis.mac  ndvcs_wiser_pi0.mac  preinit_ckov_noscint.mac  preinit_ckov_scint.mac  preinit_nockov_noscint.mac  preinit_nockov_scint.mac  sidis_pythia_bkgd.mac  sidis_sidis_pip_sig.mac
include/: AcquMCTree.C  AcquMCTree.h  ArrayHit.hh  BonusBField.hh  DIS.hh  DetectorConstruction.hh  DetectorMessenger.hh  ESSNRunAction.hh  EmPhysics.hh  EventAction.hh  EventActionMessenger.hh  Field3D.hh  G4CalDetectorConstruction.hh  G4RTPC.hh  G4SBS48D48Field.hh  G4SBSAcquMCOutput.hh  G4SBSBDHit.hh  G4SBSBDParameterisation.hh  G4SBSBDoutput.hh  G4SBSBeamDiffuserSD.hh  G4SBSBeamlineBuilder.hh  G4SBSBigBiteField.hh  G4SBSCALoutput.hh  G4SBSCDet.hh  G4SBSCalHit.hh  G4SBSCalSD.hh  G4SBSComponent.hh  G4SBSConstantField.hh  G4SBSDIS.hh  G4SBSDetMap.hh  G4SBSDetectorConstruction.hh  G4SBSEArmBuilder.hh  G4SBSECal.hh  G4SBSECalHit.hh  G4SBSECalSD.hh  G4SBSECaloutput.hh  G4SBSESEPP.hh  G4SBSEventAction.hh  G4SBSEventGen.hh  G4SBSGEMHit.hh  (+70 more)
include/ddvcs/: DDVCSDetectorConstruction.hh  DDVCSEventGen.hh  DDVCSMessenger.hh  DDVCSPrimaryGeneratorAction.hh  makeclass.pl
integration_tests/: check_rootfile.C  run_buildtests.py
integration_tests/travis/: travis.conf  travis_env.sh  travis_setup.sh
root_macros/: Bfield_diagnostic_plots.C  C16_analysis.C  C16_tree_with_flux.C  ConvertTOSCAmap.C  DIS_rates_DIS.C  DIS_rates_PYTHIA.C  ECAL_HCAL_Correlations.C  ECAL_background_dose_rate.C  ElasticEP_Correlation_Analysis.C  ElasticEP_Correlation_Analysis_withSpinTrans_julytest.C  Fit_SBS_optics_and_spin.C  G4SBS_optics_fit.C  G4SBS_spin_transport.C  GEM_background_plots.C  GEN_ERR_plots.C  GEP_FOM_BB.C  GEP_FOM_quick_and_dirty.C  GEP_FOM_quick_and_dirty_option1.C  GMN_pythia_NDE.C  MakeGEP_optics_tree.C  Optics_A1n_SIDIS.C  Optics_GEN.C  Optics_GENRP.C  Optics_GMN.C  PlotSolidAngleMatchGEP.C  Pythia6_minbias_gen.C  SIDIS_DST.h  SIDIS_beam_background_plots.C  SIDIS_plots.C  SIDIS_reduced_data_file.C  TriggerLogicECalGEP.C  WAPP_FOM_quick_and_dirty.C  WAPP_pythia_tree.h  WAPP_tree.C  WAPP_tree.h  a1n_tree.C  background_rates_GMN.C  flux.C  g4sbs_a1n_tree.C  g4sbs_tree.h  (+49 more)
scripts/: .#gmn_4.5GeV2_opcal.mac  .travis.yml  ALL.mac  BigBite90degOptics.mac  C16_analysis.C  C16_tree.C  C16_tree.h  C16_tree_with_flux.h  C16_vis.mac  ECAL_shower_profiles.C  Fit_SBS_optics_and_spin.C  G4SBS_optics_fit.C  GEN1.mac  GEN2.mac  GEN2_H2_elastic.mac  GEN2_He3_elastic.mac  GEN2_beam.mac  GEN3.mac  GEN3_Cfoils_BEAM_preinit.mac  GEN3_H2_elastic.mac  GEN3_He3_elastic.mac  GEN3_beam.mac  GEN3_beam_cfoils.mac  GEN4.mac  GEN4_H2_elastic.mac  GEN4_He3_elastic.mac  GEN4_beam.mac  GEN_ERR_plots.C  GEP0.mac  GEP0_elastic_preinit.mac  GEP0_elastic_targzoff9cm_preinit.mac  GEP1.mac  GEP12.mac  GEP1_elastic_SBSmaxfield_preinit.mac  GEP1_elastic_SBSscalefield_preinit.mac  GEP1_elastic_preinit.mac  GEP1_elastic_targzoff9cm_preinit.mac  GEP1_pgun_polx_preinit.mac  GEP1_pgun_poly_preinit.mac  GEP1_pgun_polz_preinit.mac  (+335 more)
scripts/gmn/: 0p39sf_ld2_sbs4_sbs30p_g4sbs_inel.mac  0p44981sf_ld2_sbs8_sbs50p_g4sbs_inel.mac  0p63797sf_ld2_sbs8_sbs70p_g4sbs_inel.mac  0p657sf_ld2_sbs9_sbs70p_g4sbs_inel.mac  0p657sf_lh2_sbs9_sbs70p_g4sbs_inel.mac  0p65sf_ld2_sbs4_sbs50p_g4sbs_inel.mac  0p674sf_ld2_sbs14_sbs70p_g4sbs_inel.mac  0p674sf_lh2_sbs14_sbs70p_g4sbs_inel.mac  0p815sf_ld2_sbs7_sbs85p_g4sbs_inel.mac  0p815sf_lh2_sbs7_sbs85p_g4sbs_inel.mac  0p91396sf_ld2_sbs8_sbs100p_g4sbs_inel.mac  0p97sf_ld2_sbs11_sbs100p_g4sbs_inel.mac  0p97sf_lh2_sbs11_sbs100p_g4sbs_inel.mac  NOradc_0p97sf_sbs11_sbs100p_simc_heep.mac  OT0_0p39sf_sbs4_sbs30p_simc_heep.mac  OT0_0p44981sf_sbs8_sbs50p_simc_heep.mac  OT0_0p63797sf_sbs8_sbs70p_simc_heep.mac  OT0_0p657sf_sbs9_sbs70p_simc_heep.mac  OT0_0p65sf_sbs4_sbs50p_simc_heep.mac  OT0_0p674sf_sbs14_sbs70p_simc_heep.mac  OT0_0p815sf_sbs7_sbs85p_simc_heep.mac  OT0_0p91396sf_sbs8_sbs100p_simc_heep.mac  (+30 more)
src/: #G4SBSEArmBuilder.cc#  ArraySD.cc  BeamLine.cc  BonusBField.cc  DetectorConstruction.cc  DetectorMessenger.cc  EmPhysics.cc  EventAction.cc  EventActionMessenger.cc  Field3D.cc  G4CalDetectorConstruction.cc  G4RTPC.cc  G4SBS48D48Field.cc  G4SBSAcquMCOutput.cc  G4SBSBDHit.cc  G4SBSBDParameterisation.cc  G4SBSBDoutput.cc  G4SBSBeamDiffuserSD.cc  G4SBSBeamlineBuilder.cc  G4SBSBigBiteField.cc  G4SBSCALoutput.cc  G4SBSCDet.cc  G4SBSCalHit.cc  G4SBSCalSD.cc  G4SBSComponent.cc  G4SBSConstantField.cc  G4SBSDetMap.cc  G4SBSDetectorConstruction.cc  G4SBSEArmBuilder.cc  G4SBSECal.cc  G4SBSECalHit.cc  G4SBSECalSD.cc  G4SBSECaloutput.cc  G4SBSESEPP.cc  G4SBSEventAction.cc  G4SBSEventGen.cc  G4SBSGEMHit.cc  G4SBSGEMSD.cc  G4SBSGEMoutput.cc  G4SBSGlobalField.cc  (+60 more)
(+27 files in other folders)
